# johnny5

./: .cursorrules  .editorconfig  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  DENSITY_FEATURES.md  DESIGN.md  LICENSE  README.md  SPEC.md  TODO.md  a.patch  eslint.config.cjs  package-lock.json  package.json  playwright.config.js  pyproject.toml  repomix-output.xml  test-bot-auth.md
.cursor/rules/: important.mdc
.github/workflows/: ci.yml
examples/01-one_page/: README.md  fixup.py
examples/02-split_table/: README.md
scripts/: check-python  check-web  pre-commit-hook  pre-commit-playwright-tests
src/johnny5/: __init__.py  __main__.py  asgi.py  cli.py  decomposer.py  disassembler.py  qmd_checker.py  recomposer.py  server.py
src/johnny5.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/johnny5/utils/: __init__.py  cache.py  density.py  fixup_context.py  margins.py
src/johnny5/web/: __init__.py  app.css  app.js
src/johnny5/web/static/: app.css  app.js  debug.css  density-charts.js  resize.js  theme-toggle.js
src/johnny5/web/static/css/: 0_layout.css  1_pdf.css  2_ann.css  3_rec.css
src/johnny5/web/static/css/color/: dark.css  debug.css  light.css
src/johnny5/web/templates/: index.html
tests/: conftest.py  test_basic.py  test_density.py  test_layout_models.py
tests/e2e/: controls_zindex.spec.js  disassemble_refresh.spec.js  disassemble_workflow.spec.js  grid_zoom_coverage.spec.js  indicator_layout_static.spec.js  indicator_squares.spec.js  origin_axes.spec.js  page_grid.spec.js  ruler_sync.spec.js  zoom_pan_sync.spec.js
tests/e2e/utils/: disassembly.js  grid.js
tests/fixtures/: __init__.py
