[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "johnny5"
version = "0.1.0"
description = "Disassemble, fix, and reassemble structured documents using Docling"
authors = [{ name = "William Wieselquist" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "watchfiles",
    "docling",
    "docling-parse",
    "jinja2",
    "numpy",
    "click",
    "opencv-python",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "httpx",
]

[project.urls]
Homepage = "https://github.com/wawiesel/johnny5"
Issues = "https://github.com/wawiesel/johnny5/issues"

[project.scripts]
jny5 = "johnny5.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/johnny5"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = false
# Ignore untyped decorator warnings (common with FastAPI/Click/pytest)
disable_error_code = ["misc"]

[tool.pytest.ini_options]
addopts = "-q --tb=short"
testpaths = ["tests"]
